--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -625,3 +625,73 @@ div.note a{
 div.pad-10{padding: 10px;}
 div.pad-5 {padding:5px;}
 /* End Generic */
+
+
+/* Form sections */
+
+div.form-section {
+    margin: 10px;
+    padding: 8px;
+
+    background: #dfdfdf;
+    background:-webkit-gradient(linear, left top, left bottom, from(#eee), to(#dfdfdf));
+    background:-moz-linear-gradient(top, #eee, #dfdfdf);
+    background:linear-gradient(top, #eee, #dfdfdf);
+
+    -moz-border-radius:10px; -webkit-border-radius:10px; border-radius:10px;
+    -moz-box-shadow: 2px 2px 2px #333; -webkit-box-shadow: 2px 2px 2px #333; box-shadow: 2px 2px 2px #333;
+
+    color: #333;
+    text-shadow: 1px 1px 1px #ccc;
+}
+
+div.form-section form > dl {
+    padding-right:2px;
+    margin-top:0;
+}
+
+div.form-section form > dl dd {
+    margin-left:0;
+}
+
+div.form-section form > dl input {
+    width:100%;
+    height:30px;
+    border:0;
+    padding: 2px 0 2px 2px;
+    margin: 0;
+    font-size: 20px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    border-radius: 5px;
+}
+
+div.form-section form > dl dt {
+    font-size: 1.2em;
+    color: #333;
+    text-shadow: 1px 1px 1px #aaa;
+}
+
+div.form-section form > p.help-bubble {
+    margin-right: 138px;
+    margin-left:0;
+
+}
+
+div.form-section form > p.submit-buttons {
+    display:block;
+    float:right;
+    width:120px;
+    margin:0;
+}
+
+div.form-section form > p.submit-buttons input {
+    height: 30px;
+    margin-top: 15px;
+    font-size: 1.2em;
+    width:100%;
+}
+
+div.form-section form > p.submit-buttons input:first-child {
+    margin-top:0;
+}
