--- a/molly/molly/apps/z3950/templates/z3950/search_form.html
+++ b/molly/molly/apps/z3950/templates/z3950/search_form.html
@@ -1,67 +1,25 @@
-{% ifnotequal style_group "dumb"  %}
-<style>
-#library-search {
-    padding:10px;
-}
-#library-search table {
-    width:100%;
-    border-collapse:collapse;
-    color: #ffffff;
-}
-#library-search th {
-    width:4em;
-    padding-right: 5px;
-    text-align: right;
-}
-#library-search td {
-    padding-right:5px;
-}
-#library-search tbody input{
-    width:100%;
-    padding:3px;
-    border:0px solid black;
-    font-size: 1.4em;
-}
-</style>
-{% endifnotequal %}
+<div class="form-section">
+  <h2 class="invisible">Search libraries</h2>
+  <form method="get" action="{% url z3950:search %}">
+    <dl>
+      <dt>{{ search_form.title.label_tag }}:</dt>
+      <dd>{{ search_form.title }}</dd>
+      <dt>{{ search_form.author.label_tag }}:</dt>
+      <dd>{{ search_form.author }}</dd>
+      <dt>{{ search_form.isbn.label_tag }}:</dt>
+      <dd>{{ search_form.isbn }}</dd>
+    </dl>
 
-<div class="section">
-  <h2>Search Oxford University Libraries</h2>
-  <div class="note"><div class="bubble pad-10">
-    Search OLIS by either some subset of title and author, or by ISBN.
-{% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
-  </div></div>
+    <p class="submit-buttons">
+      <input type="submit" value="Search"/><br />
+      <input type="reset" value="Reset Form"/>
+    </p>
 
-  <div id="library-search">
-    <form method="get" action="{% url z3950:search %}">
-      <table>
-        <tbody>
-          <tr>
-            <th>{{ search_form.title.label_tag }}:</th>
-            <td>{{ search_form.title }}</td>
-          </tr>
+    <p class="help-bubble">
+      Search OLIS by either some subset of title and author, or by ISBN.{% if not device.has_qwerty_keyboard %}
+      You may use a '*' in place of an 'X' in an ISBN.{% endif %}
+    </p>
 
-          <tr>
-            <th>{{ search_form.author.label_tag }}:</th>
-            <td><div>{{ search_form.author }}</div></td>
-          </tr>
-    
-          <tr>
-            <th>{{ search_form.isbn.label_tag }}:</th>
-            <td><div>{{ search_form.isbn }}</div></td>
-          </tr>
-        </tbody>
-        
-        <tfoot>
-          <tr>
-            <td colspan="2">
-              <input type="submit" value="Search"/>
-              <input type="reset" value="Reset"/>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
-
-    </form>
-  </div>
+    <div style="clear:both"></div>
+  </form>
 </div>
