Moved feature submission form to the style now used in library search.

--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -645,6 +645,11 @@ div.form-section {
     text-shadow: 1px 1px 1px #ccc;
 }
 
+div.form-section h2 {
+    color:#002147;
+}
+
+
 div.form-section form > dl {
     padding-right:2px;
     margin-top:0;
