Tidying CSS and moving the comment submit form over to the new pretty form styling.

--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -716,3 +716,15 @@ div.form-section form > p.submit-buttons input {
 div.form-section form > p.submit-buttons input:first-child {
     margin-top:0;
 }
+
+
+div.vote-box {
+    text-align: center;
+    font-weight: bold;
+    width:35px;
+    margin:5px;
+}
+
+div.vote-box span {
+    padding:0;
+]
