--- a/molly/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="section">
-  <h2>Vote on feature suggestions</h2>
+  <h2>Recent suggestions</h2>
 
 {% if features.count %}
   <ul class="content-list">
