--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -233,6 +233,7 @@ ul.content-list, ul.link-list, ol.search-results {
     list-style: none;
     padding: 0; margin: 0;
     
+    
     -webkit-border-bottom-left-radius: 8px;
     -webkit-border-bottom-right-radius: 8px;
     -moz-border-radius-bottomleft: 8px;
@@ -241,14 +242,6 @@ ul.content-list, ul.link-list, ol.search-results {
     border-bottom-right-radius: 8px;
 }
 
-ul.no-round-bottom {
-    -webkit-border-bottom-left-radius: 0px;
-    -webkit-border-bottom-right-radius: 0px;
-    -moz-border-radius-bottomleft: 0px;
-    -moz-border-radius-bottomright: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-}
 
 ul.content-list {
     background-color:#dfdfdf;
@@ -638,7 +631,7 @@ div.pad-5 {padding:5px;}
 
 div.form-section {
     margin: 10px;
-    padding: 8px;
+    padding: 0px;
 
     background: #dfdfdf;
     background:-webkit-gradient(linear, left top, left bottom, from(#eee), to(#dfdfdf));
@@ -656,6 +649,9 @@ div.form-section h2 {
     color:#002147;
 }
 
+div.form-section form {
+    padding: 8px;
+}
 
 div.form-section form > dl {
     padding-right:2px;
@@ -738,4 +734,43 @@ div.vote-box {
 
 div.vote-box span {
     padding:0;
+}
+
+ul.content-list li.superuser-comment {
+    background-color:#bfbfbf;
+}
+
+div.no-round-bottom, ul.no-round-bottom {
+    -webkit-border-bottom-left-radius: 0px;
+    -webkit-border-bottom-right-radius: 0px;
+    -moz-border-radius-bottomleft: 0px;
+    -moz-border-radius-bottomright: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+div.section div.header, div.form-section div.header {
+    background:#dfdfdf;
+    color:#222;
+    padding:5px;
+    background:-moz-linear-gradient(top, #fff, #cfcfcf);
+    background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#dfdfdf));
+    -webkit-border-top-right-radius:5px;
+    -webkit-border-top-left-radius:5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top:1px solid rgba(255, 255, 255, 0.33);
+    border-left:1px solid rgba(255, 255, 255, 0.33);
+}
+
+div.section div.header h2, div.form-section div.header h2 {
+    color: rgb(34, 34, 34);
+    text-shadow: 2px 2px 2px rgb(204, 204, 204);
+    text-align: left;
+    font-size: 11pt;
+    padding-top: 3px;
+}
+
+div.section div.header + ul.content-list, div.form-section div.header + form, div.section div.header + div.section-content {
+    border-top: 1px solid rgb(152, 161, 172);
 }
