--- a/molly/molly/apps/feature_vote/templates/comments/posted.html
+++ b/molly/molly/apps/feature_vote/templates/comments/posted.html
@@ -1,11 +1,38 @@
-{% extends "comments/base.html" %}
+{% extends "comments/base.html" %}{% load comments %}
 
-3 
-4   {% block title %}Thanks for adding a feature request!{% endblock %}
-5   
-6   {% block content %}
-    <div class="section">
-7     <h2>Feature Request Sent!</h2>
-    <p> Thanks for adding a feature request, we'll soon moderate it and add it to our list (assuming no one has asked for the same thing before).</p>
+{% block title %}Comment submitted{% endblock %}
+
+{% block header %}
+    <div id="bc-header">
+      <ol id="bc">
+        <li><a href="{% url home:index %}">
+          <img src="{{ MEDIA_URL }}png/logo.png" width="57" height="30" alt="Home"/>
+        </a></li>
+        <li><a href="{% url feature_vote:index %}" title="Feature suggestions">
+          <img src="{{ MEDIA_URL }}png/index-icons/feature_vote-bc.png" alt="Feature suggestions"/>
+        </a></li>
+        <li><a href="{% url feature_vote:feature-detail comment.content_object.id %}" title="{{ comment.content_object.title }}">
+          &hellip;
+        </a></li>
+      </ol> 
+      <div id="bc-title">
+        <h1>Add a comment</h1>
+      </div>
     </div>
-8   {% endblock %}
+{% endblock %}
+
+
+{% block content %}
+
+<div class="section">
+  <div class="header">
+    <h2>Comment submitted</h2>
+  </div>
+  
+  <div class="section-content">
+    <p>Your comment has been submitted.</p>
+    
+    <p>You may wish to <a href="{% url feature_vote:feature-detail comment.content_object.id %}">go back whence you came</a>.</p>
+  </div>
+</div>
+{% endblock %}
