--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -75,7 +75,8 @@
     </div>
 
     <ul class="stand-alone link-list round-top">
-            <li class="round-top"><a href="{% url home:static_about %}">About this site</a></li>
+            <li class="round-top"><a href="{% url feature_vote:index %}">Suggest a feature</a></li>
+			<li class=""><a href="{% url home:static_about %}">About this site</a></li>
 			{% if has_user_messages %}
             <li><a href="{% url home:messages %}">Read messages from the developers</a></li>
 			{% endif %}
